--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,12 @@ httpx==0.25.1
 uuid==1.30
 python-multipart==0.0.6
 anthropic==0.5.0
+supabase==1.0.3
+numpy==1.24.3
+requests==2.31.0
+GitPython==3.1.31
+asyncio==3.4.3
+difflib3==0.5.0
+mimetypes==0.1.0
+logging==0.4.9.6
+aiohttp==3.8.5
