--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -2,19 +2,25 @@
   "name": "personal-ai-agent-frontend",
   "version": "1.0.0",
   "description": "Frontend for Personal AI Agent System",
-  "main": "src/index.js",
+  "main": "index.html",
   "scripts": {
-    "start": "parcel public/index.html",
-    "build": "parcel build public/index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.15.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "axios": "^1.6.0",
+    "framer-motion": "^12.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
-    "parcel": "^2.10.0"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.3"
   }
 }
