--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -17,10 +17,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "vite": "^6.2.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.3"
+    "@vitejs/plugin-react": "^4.3.4"
   }
 }
