--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "dependencies": {
-<<<<<<< HEAD
-    "lodash": "^4.17.21"
-=======
+    "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0"
->>>>>>> 6b2ed86 (Fix: Final layout deduplication + visual stability across polling components)
   }
 }
