--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "axios": "^1.6.0",
     "framer-motion": "^12.6.2",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
