fix: rebuild clean vercel.json from editor for proper Vercel parse

--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,7 @@
   "outputDirectory": "app/frontend/dist",
   "framework": "vite",
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/api/(.*)", "destination": "/api/$1.js" },
+    { "source": "/(.*)", "destination": "/app/frontend/dist/index.html" }
   ]
 }
