--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,15 @@
 {
-  "buildCommand": "cd app/frontend && npm run build",
-  "outputDirectory": "app/frontend/dist",
-  "framework": "vite",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1.js" },
-    { "source": "/(.*)", "destination": "/app/frontend/dist/index.html" }
-  ]
-}
+    "buildCommand": "cd app/frontend && npm run build",
+    "outputDirectory": "app/frontend/dist",
+    "framework": "vite",
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "/api/$1.js"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/app/frontend/dist/index.html"
+      }
+    ]
+  }
