--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd app/frontend && npm install && npm run build",
+  "buildCommand": "npm install --prefix ./app/frontend && npm run build --prefix ./app/frontend",
   "outputDirectory": "app/frontend/dist",
   "framework": "vite",
   "rewrites": [
