--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"projectId":"prj_YTagBZux4YC5eLIFi6dczsAgcRqV","orgId":"team_qmOlEGLsFdCES1VrqM8ZWSXw"}
+{
+  "projectId": "prj_personal-ai-agent",
+  "orgId": "team_wesheets"
+}
