fix: correct vercel.json paths to use app/frontend directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "cd app/frontend && npm run build",
+  "outputDirectory": "app/frontend/dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
