fix: update vercel.json to remove prefix and add path context comment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
+// NOTE: Prefixing paths in build commands should only be used if Vercel's root is at the monorepo root.
+// Always verify the working directory context before assuming paths.
 {
-  "buildCommand": "pwd && ls -la && npm --prefix app/frontend run build",
-  "outputDirectory": "app/frontend/dist",
+  "buildCommand": "pwd && ls -la && npm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ]
