Remove vercel.json to use dashboard settings

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "personal-ai-agent-root",
   "private": true,
   "scripts": {
-    "build": "cd app/frontend && npm install && npm run build"
+    "build": "cd app/frontend && npm install && vite build"
   }
 }
