fix(frontend): add lodash.isequal to resolve Vite Rollup import error

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "scripts": {
     "build": "cd app/frontend && npm install && vite build"
+  },
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
   }
 }
