--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
     "lodash": "^4.17.21",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
