fix(env): update CORS_ALLOWED_ORIGINS to support frontend domain access

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
 VITE_API_BASE_URL=https://personal-ai-agent-backend-production.up.railway.app
+CORS_ALLOWED_ORIGINS=https://personal-ai-agent-frontend.vercel.app,https://studio.manus.im
+CORS_ALLOW_CREDENTIALS=true
