--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
 VITE_API_BASE_URL=https://personal-ai-agent-backend-production.up.railway.app
 CORS_ALLOWED_ORIGINS=https://personal-ai-agent-frontend.vercel.app,https://studio.manus.im
 CORS_ALLOW_CREDENTIALS=true
+SUPABASE_URL=your-supabase-url
+SUPABASE_KEY=your-supabase-key
+OPENAI_API_KEY=your-openai-api-key
