--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# Vite specific environment variables
 VITE_API_BASE_URL=http://localhost:8000
-OPENAI_API_KEY=sk-your-openai-api-key
-DB_TYPE=local
+VITE_OPENAI_API_KEY=sk-your-openai-api-key
+VITE_DB_TYPE=local
