--- a/frontend-ui-v2/package.json
+++ b/frontend-ui-v2/package.json
@@ -35,6 +35,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
+    "rollup": "^3.29.4",
     "vite": "^6.2.0"
   },
   "lint-staged": {
