Integrate Promethios HAL Agent UI v1.0

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "msw": "^2.7.3",
     "prettier": "^3.5.3",
     "vite": "^6.2.0"
   },
