--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-# Vite specific environment variables
-VITE_API_BASE_URL=http://localhost:8000
-VITE_OPENAI_API_KEY=sk-your-openai-api-key
-VITE_DB_TYPE=local
+SUPABASE_URL=https://example.supabase.co
+SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.mock_key_for_testing
