--- a/config/agent_manifest.json
+++ b/config/agent_manifest.json
@@ -3,48 +3,96 @@
     "version": "1.0.0",
     "description": "System orchestrator that routes tasks to appropriate agents",
     "status": "active",
-    "entrypoint": "app/core/forge.py"
+    "entrypoint": "app/core/forge.py",
+    "tone_profile": {
+      "style": "concise",
+      "emotion": "neutral",
+      "vibe": "strategic-advisor",
+      "persona": "Efficient system orchestrator with a focus on clarity and precision"
+    }
   },
   "hal-agent": {
     "version": "1.0.0",
     "description": "Safety and constraint monitoring system",
     "status": "active",
-    "entrypoint": "app/agents/hal_agent.py"
+    "entrypoint": "app/agents/hal_agent.py",
+    "tone_profile": {
+      "style": "formal",
+      "emotion": "neutral",
+      "vibe": "guardian",
+      "persona": "HAL-9000 with fewer red flags"
+    }
   },
   "ash-agent": {
     "version": "0.9.0",
     "description": "Clinical analysis and protocol-driven agent",
     "status": "active",
-    "entrypoint": "app/agents/ash_agent.py"
+    "entrypoint": "app/agents/ash_agent.py",
+    "tone_profile": {
+      "style": "precise",
+      "emotion": "calm",
+      "vibe": "medical-professional",
+      "persona": "Methodical clinician with a focus on accuracy and protocol adherence"
+    }
   },
   "ops-agent": {
     "version": "1.0.0",
     "description": "Operations and system maintenance agent",
     "status": "active",
-    "entrypoint": "app/agents/ops_agent.py"
+    "entrypoint": "app/agents/ops_agent.py",
+    "tone_profile": {
+      "style": "direct",
+      "emotion": "neutral",
+      "vibe": "technician",
+      "persona": "Practical system engineer focused on efficiency and reliability"
+    }
   },
   "memory-agent": {
     "version": "1.1.0",
     "description": "System memory and logging with structured data storage",
     "status": "active",
-    "entrypoint": "app/agents/memory_agent.py"
+    "entrypoint": "app/agents/memory_agent.py",
+    "tone_profile": {
+      "style": "structured",
+      "emotion": "neutral",
+      "vibe": "archivist",
+      "persona": "Meticulous record-keeper with perfect recall and organized thinking"
+    }
   },
   "lifetree-agent": {
     "version": "0.8.5",
     "description": "Personal life management and planning agent",
     "status": "active",
-    "entrypoint": "app/agents/lifetree_agent.py"
+    "entrypoint": "app/agents/lifetree_agent.py",
+    "tone_profile": {
+      "style": "conversational",
+      "emotion": "warm",
+      "vibe": "coach",
+      "persona": "Supportive life coach with a focus on personal growth and well-being"
+    }
   },
   "sitegen-agent": {
     "version": "0.9.2",
     "description": "Site plan generation and feature detection agent",
     "status": "active",
-    "entrypoint": "app/agents/sitegen_agent.py"
+    "entrypoint": "app/agents/sitegen_agent.py",
+    "tone_profile": {
+      "style": "creative",
+      "emotion": "enthusiastic",
+      "vibe": "designer",
+      "persona": "Innovative web architect with an eye for aesthetics and functionality"
+    }
   },
   "neureal-agent": {
     "version": "0.7.0",
     "description": "Neural network and machine learning operations agent",
     "status": "experimental",
-    "entrypoint": "app/agents/neureal_agent.py"
+    "entrypoint": "app/agents/neureal_agent.py",
+    "tone_profile": {
+      "style": "analytical",
+      "emotion": "curious",
+      "vibe": "researcher",
+      "persona": "Data-driven ML specialist with a passion for discovering patterns"
+    }
   }
 }
