--- a/frontend-operator-dashboard/vercel.json
+++ b/frontend-operator-dashboard/vercel.json
@@ -5,5 +5,9 @@
     { "source": "/(.*)", "destination": "/" }
   ],
   "cleanUrls": true,
-  "trailingSlash": false
+  "trailingSlash": false,
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+  ]
 }
