--- a/frontend-operator-dashboard/vercel.json
+++ b/frontend-operator-dashboard/vercel.json
@@ -5,9 +5,5 @@
     { "source": "/(.*)", "destination": "/" }
   ],
   "cleanUrls": true,
-  "trailingSlash": false,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
-  ]
+  "trailingSlash": false
 }
