--- a/app/system_manifest.json
+++ b/app/system_manifest.json
@@ -1,27 +1,23 @@
 {
   "agents": {
     "hal": {
-      "tools": [
+      "tools": "LoopResponseRequest",
+      "schema_wrapped": "LoopResponseResult",
+      "fallbacks": [
         "openai_generate_code",
         "memory_read",
         "memory_write"
       ],
-      "schema_wrapped": true,
-      "fallbacks": [
-        "openai_fallback",
-        "schema_fallback"
-      ],
       "checksum": "initial"
     },
     "orchestrator": {
-      "tools": [
+      "tools": "LoopOrchestrationRequest",
+      "schema_wrapped": "LoopOrchestrationResult",
+      "fallbacks": [
+        "delegate",
         "memory_read",
         "memory_write",
-        "plan_next_agent"
-      ],
-      "schema_wrapped": true,
-      "fallbacks": [
-        "schema_fallback"
+        "plan_execution"
       ],
       "checksum": "initial"
     },
@@ -32,6 +28,30 @@
       "schema_wrapped": true,
       "fallbacks": [],
       "checksum": "initial"
+    },
+    "critic": {
+      "tools": "LoopSummaryReviewRequest",
+      "schema_wrapped": "LoopReflectionRejection",
+      "fallbacks": [
+        "log_rejection",
+        "write_memory"
+      ],
+      "checksum": "initial"
+    },
+    "sage": {
+      "name": "SAGE",
+      "description": "Summarizes loop beliefs and logs structured belief maps",
+      "capabilities": [
+        "belief_extraction",
+        "confidence_scoring",
+        "emotional_weight_analysis"
+      ],
+      "cascade_mode": true,
+      "post_critic": true,
+      "memory_tags": [
+        "sage_summary_*"
+      ],
+      "last_updated": "2025-04-24T17:08:57.026537"
     }
   },
   "schemas": {
@@ -74,6 +94,60 @@
       ],
       "version": "v1.0.0",
       "checksum": "updated_checksum"
+    },
+    "OutputPolicyRequest": {
+      "file": "/app/schemas/output_policy_schema.py",
+      "class": "OutputPolicyRequest",
+      "checksum": "output_policy_schema_checksum",
+      "routes": [
+        "/policy/enforce"
+      ]
+    },
+    "OutputPolicyResult": {
+      "file": "/app/schemas/output_policy_schema.py",
+      "class": "OutputPolicyResult",
+      "checksum": "output_policy_schema_checksum",
+      "routes": [
+        "/policy/enforce"
+      ]
+    },
+    "PolicyLogRequest": {
+      "file": "/app/schemas/output_policy_schema.py",
+      "class": "PolicyLogRequest",
+      "checksum": "output_policy_schema_checksum",
+      "routes": [
+        "/policy/logs"
+      ]
+    },
+    "PolicyLogResponse": {
+      "file": "/app/schemas/output_policy_schema.py",
+      "class": "PolicyLogResponse",
+      "checksum": "output_policy_schema_checksum",
+      "routes": [
+        "/policy/logs"
+      ]
+    },
+    "SageReviewRequest": {
+      "file": "/app/schemas/sage_schema.py",
+      "class": "SageReviewRequest",
+      "checksum": "sage_schema_checksum",
+      "routes": [
+        "/sage/review"
+      ]
+    },
+    "BeliefScore": {
+      "file": "/app/schemas/sage_schema.py",
+      "class": "BeliefScore",
+      "checksum": "sage_schema_checksum",
+      "routes": []
+    },
+    "SageReviewResult": {
+      "file": "/app/schemas/sage_schema.py",
+      "class": "SageReviewResult",
+      "checksum": "sage_schema_checksum",
+      "routes": [
+        "/sage/review"
+      ]
     }
   },
   "routes": {
@@ -100,6 +174,76 @@
       "schema": "TestSchema",
       "status": "registered",
       "errors": []
+    },
+    "/loop/snapshot/save": {
+      "method": "POST",
+      "schema": "LoopSnapshot",
+      "status": "tested",
+      "errors": []
+    },
+    "/loop/snapshot/restore": {
+      "method": "POST",
+      "schema": "LoopSnapshot",
+      "status": "tested",
+      "errors": []
+    },
+    "/critic/review": {
+      "method": "POST",
+      "schema": "LoopSummaryReviewRequest",
+      "status": "tested",
+      "errors": []
+    },
+    "/drift/monitor": {
+      "method": "POST",
+      "schema": "DriftMonitorRequest",
+      "status": "tested",
+      "errors": []
+    },
+    "/drift/history": {
+      "method": "GET",
+      "schema": "None",
+      "status": "tested",
+      "errors": []
+    },
+    "/orchestrator/validate_contract": {
+      "method": "POST",
+      "schema": "ContractValidationRequest",
+      "status": "tested",
+      "errors": []
+    },
+    "/orchestrator/validate_delegation": {
+      "method": "POST",
+      "schema": "DelegationValidationRequest",
+      "status": "tested",
+      "errors": []
+    },
+    "/orchestrator/handle_violation": {
+      "method": "POST",
+      "schema": "None",
+      "status": "tested",
+      "errors": []
+    },
+    "/orchestrator/check_recovery_authorization": {
+      "method": "POST",
+      "schema": "None",
+      "status": "tested",
+      "errors": []
+    },
+    "/policy/enforce": {
+      "method": "POST",
+      "schema": "OutputPolicyRequest",
+      "status": "tested"
+    },
+    "/policy/logs": {
+      "method": "POST",
+      "schema": "PolicyLogRequest",
+      "status": "tested"
+    },
+    "/sage/review": {
+      "method": "POST",
+      "schema": "SageReviewRequest",
+      "status": "tested",
+      "errors": []
     }
   },
   "modules": {
@@ -122,6 +266,31 @@
       "file": "app/modules/project_state.py",
       "wrapped_with_schema": true,
       "last_updated": "2025-04-24"
+    },
+    "retry_handler": {
+      "file": "app/utils/retry_handler.py",
+      "wrapped_with_schema": false,
+      "last_updated": "2025-04-24T15:28:37.176434"
+    },
+    "error_classification": {
+      "file": "app/utils/error_classification.py",
+      "wrapped_with_schema": false,
+      "last_updated": "2025-04-24T15:28:37.177172"
+    },
+    "sage": {
+      "file": "app/agents/sage.py",
+      "wrapped_with_schema": true,
+      "last_updated": "2025-04-24T17:08:57.026634"
+    },
+    "sage_cascade_integration": {
+      "file": "app/integrations/sage_cascade_integration.py",
+      "wrapped_with_schema": true,
+      "last_updated": "2025-04-24T17:08:57.026637"
+    },
+    "orchestrator_sage_integration": {
+      "file": "app/integrations/orchestrator_sage_integration.py",
+      "wrapped_with_schema": true,
+      "last_updated": "2025-04-24T17:08:57.026639"
     }
   },
   "memory": {
@@ -133,11 +302,25 @@
   "hardening_layers": {
     "schema_checksum_tracking": true,
     "schema_discovery_fallback": true,
-    "test_route_integrity": false
+    "test_route_integrity": false,
+    "retry_handler_enabled": true,
+    "error_classification_enabled": true,
+    "loop_snapshot_enabled": true,
+    "loop_rewind_enabled": true,
+    "loop_rejection_enabled": true,
+    "drift_monitor_enabled": true,
+    "agent_contract_enforcement": true,
+    "output_policy_enforcement": true,
+    "sage_cascade_mode_enabled": true
   },
   "manifest_meta": {
     "version": "1.0.0",
     "created_at": "2025-04-24T14:28:08.000Z",
-    "last_updated": "2025-04-24T14:37:36.792396"
+    "last_updated": "2025-04-24T17:08:57.026641",
+    "last_updated_by": "sage_cascade_manifest_update.py"
+  },
+  "testing": {
+    "last_endpoint_sweep": "\u2705 PASSED",
+    "timestamp": "2025-04-24T16:44:39.819205"
   }
 }
